refactor: restructure project by moving dev and playground components, update script references, and remove obsolete files

--- a/dev.html
+++ b/dev.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <script type="module" src="/src/playground/index.tsx"></script>
+    <script type="module" src="/src/dev/index.tsx"></script>
     <div id="root"></div>
 </body>
 
