feat: integrate Pico CSS for improved styling and enhance example components with consistent design

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React State Custom - Interactive Playground</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
     <meta name="description" content="A hook-first state management library for React 19. Try interactive examples with live code editing - Counter, Todo, Forms, Timer, and Shopping Cart.">
     <meta name="keywords" content="react, state management, hooks, react 19, context api, typescript">
     <meta name="author" content="React State Custom">
